--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.0",
     "component": "^1.1.0",
     "sweetalert2": "^8.17.1",
     "vue": "^2.6.10",
